fixed card number overflow

--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ input::placeholder {
     padding-bottom: 50px;
   }
   .card-number {
-    font-size: 1.9rem;
+    font-size: 1.8rem;
   }
   .front-card div {
     margin-top: auto;
